syntax = "proto3";

package pb;

option go_package = "github.com/Chystik/runtime-metrics/protobuf/pb";

service MetricsService {
    rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse) {}
    rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse) {}
    rpc GetMetric(GetMetricRequest) returns (GetMetricResponse) {}
    rpc PingDB(PingDBRequest) returns (PingDBResponse) {}
}

message UpdateMetricsRequest {
    repeated Metric metrics = 1;
}

message UpdateMetricsResponse {
    Error error = 1;
}

message UpdateMetricRequest {
    Metric metric = 1;
}

message UpdateMetricResponse {
    Error error = 1;
}

message GetMetricRequest {
    Metric metric = 1;
}

message GetMetricResponse {
    Metric metric = 1;
    Error error = 2;
}

message PingDBRequest {
}

message PingDBResponse {
    Error error = 1;
}

message Metric {
    string id = 1;
    string type = 2;
    sint64 delta = 3;
    double value = 4;
}

message Error {
    string message = 1;
}